✨ 更新 README 和 SETUP_GUIDE 文档，增加详细环境搭建指南，优化项目模板生成配置。调整 App.vue 和 CodeGenerator.vue 组件，增强用户体验，修复链接和样式问题。新增 EnvironmentGuide 组件，提供项目模板配置向导，支持选择技术栈和构建工具。